2006-10-02  Jb Evain  <jbevain@gmail.com>

	* implement IList on the named collections.

	* implement the first bits of Win32 resources handling.

	* Mono.Cecil/ReflectionHelper.cs:
		It does not make sense to import the assembly flags.

2006-09-28  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/MethodDefinitionCollection.cs
	  Mono.Cecil/ConstructorCollection.cs
	  Mono.Cecil.Cil/InstructionCollection.cs
	  CodeGen/templates/IndexedCollection.cs
		Fix StackOverlow.

2006-09-27  Jb Evain  <jbevain@gmail.com>

	* *Collection.cs: use CollectionBase when possible.

2006-09-24  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/AssemblyFactory.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil.Cil/ISymbolStoreFactory.cs
	  Mono.Cecil.Cil/SymbolStoreHelper.cs:
		Some more work on the debugging infos api.

	* Mono.Cecil/MethodDefinitionCollection.cs
	  Mono.Cecil/ConstructorCollection.cs
	  CodeGen/templates/IndexedCollection.cs:
		Fix the GetConstructor/GetMethod methods.
		Based on a patch by Jon Chambers.

2006-09-20  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/StructureWriter.cs
	  Mono.Cecil/ModuleDefinition.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil/AssemblyFactory.cs
	  Mono.Cecil.Cil/ISymbolReader.cs
	  Mono.Cecil.Cil/CodeWriter.cs
	  Mono.Cecil.Cil/ISymbolWriter.cs
	  Mono.Cecil.Cil/SymbolStoreHelper.cs:
		Working on the debug infos stuff.

	* Mono.Cecil.Signatures/SignatureReader.cs:
		Ensure custom attributes are read when they can be.
		Patch by Sebastien Pouliot.

2006-09-19  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ModuleDefinition.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil.Cil/Document.cs
	  Mono.Cecil.Cil/Instruction.cs
	  Mono.Cecil.Cil/SequencePoint.cs
	  Mono.Cecil.Cil/CodeReader.cs
	  Mono.Cecil.Cil/IScopeProvider.cs
	  Mono.Cecil.Cil/ISymbolReader.cs
	  Mono.Cecil.Cil/CodeWriter.cs
	  Mono.Cecil.Cil/ISymbolWriter.cs
	  Mono.Cecil.Cil/IVariableDefinitionProvider.cs
	  Mono.Cecil.Cil/SymbolStoreHelper.cs